--- a/_posts/2025-01-09-az-policy.md
+++ b/_posts/2025-01-09-az-policy.md
@@ -3,13 +3,14 @@ layout: post
 title: "O que é Azure Policy? Uma Visão Completa"
 author: rafaferreira011
 categories: [Artigos, Azure, Policy]
-tags: [Artigos, Azure, Segurança, TLS, Policy]
+tags: [Artigos, Azure, Segurança, Policy]
 ---
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/01.png)
 
 
-O [**Azure Policy**](https://learn.microsoft.com/pt-br/azure/governance/policy/) é um serviço nativo do Microsoft Azure projetado para ajudar organizações a implementar governança e conformidade de forma automatizada e em larga escala. Ele garante que os recursos na nuvem estejam em conformidade com as diretrizes corporativas, padrões de segurança e requisitos regulatórios.
+O [**Azure Policy**](https://learn.microsoft.com/pt-br/azure/governance/policy/) é um recurso da Microsoft Azure que ajuda organizações a implementar governança e compliance de forma automatizada e em larga escala. Ele garante que os recursos na nuvem estejam em conformidade com as diretrizes corporativas, padrões de segurança e requisitos regulatórios. 
+Imagine que, toda vez que você vê uma placa — seja no shopping ou no trânsito — ela funciona como uma policy (política). A placa tem a função de te alertar sobre regras e comportamentos esperados. Caso você não siga essas orientações e um segurança perceba a irregularidade, ele pode te abordar, corrigir sua ação ou até mesmo te impedir de continuar no local.
 
 ## O que o Azure Policy Faz?
 O Azure Policy avalia continuamente os recursos e as ações no Azure com base em **definições de política**. Essas definições, escritas em formato JSON, descrevem regras que determinam se os recursos estão ou não em conformidade com os padrões estabelecidos.
@@ -19,7 +20,6 @@ O Azure Policy avalia continuamente os recursos e as ações no Azure com base e
 - **Automação e Consistência:** Implementa políticas de maneira consistente em todas as suas assinaturas e grupos de recursos.
 - **Segurança e Gerenciamento:** Reforça políticas de segurança, como restringir SKUs de VMs, impor criptografia e definir regiões específicas para implantação de recursos.
 - **Conformidade Regulatória:** Auxilia no cumprimento de normas como GDPR, ISO 27001 e SOC 2.
-- **Gerenciamento de Custo:** Impede a criação de recursos não aprovados e ajuda no controle de gastos.
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/az-policy/02.png)
 
@@ -49,9 +49,9 @@ Exemplo de definição de política em JSON:
 }
 ```
 
-### Iniciativas (Policy Sets)
+### Iniciativas
 Uma **iniciativa** é uma coleção de múltiplas definições de políticas agrupadas com um propósito comum, como:
-- Garantir conformidade regulatória.
+- Garantir conformidade regulatória (por exemplo: GDPR, ISO 27001).
 - Padronizar a segurança de uma aplicação.
 
 ### Atribuições
@@ -83,7 +83,6 @@ Parece frustrante ser bloqueado quando você só queria testar uma VM, certo? No
 
 - ✅ **Conformidade Legal:** Algumas empresas precisam armazenar dados apenas em regiões específicas por leis como a LGPD (Lei Geral de Proteção de Dados).
 - ✅ **Otimização de Custos:** Restringir o uso de regiões mais caras pode reduzir significativamente os gastos.
-- ✅ **Segurança e Controle:** Controlar onde os dados são armazenados ajuda a evitar exposição indevida.
 
 ### Como Resolver?
 
@@ -111,12 +110,20 @@ Embora ambos estejam relacionados à governança e controle no Azure, eles têm 
 
 - **Inicie com o Efeito Audit:** Antes de bloquear recursos, use `Audit` para monitorar o impacto das políticas.
 - **Use Iniciativas:** Agrupe políticas relacionadas para facilitar a gestão.
-- **Automatize com Azure DevOps:** Implemente Azure Policy como código (Policy as Code) para aplicar políticas de forma automatizada em pipelines CI/CD.
+- **Automatize com IAC:** Implemente Azure Policy como infraestrutura como código (IAC) para aplicar políticas de forma automatizada em pipelines CI/CD.
 - **Exclua Recursos Sensíveis:** Utilize `notScopes` para excluir recursos ou grupos de recursos específicos de políticas rígidas.
 
 ## Conclusão
 
-O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele oferece controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória. Implementando boas práticas e monitoramento contínuo, você pode garantir que seu ambiente esteja sempre seguro e alinhado às políticas organizacionais. Quer aprender mais?
+O **Azure Policy** é uma ferramenta essencial para garantir governança e conformidade no Azure. Ele proporciona controle robusto para organizações que buscam proteger seus ambientes de nuvem e manter padrões de segurança e conformidade regulatória.
+
+Implementando boas práticas e monitoramento contínuo, sua organização pode manter um ambiente seguro e alinhado às políticas corporativas.
+
+Ao estudar **Azure Policy** você estará se preparando para as certificações:
+
+- [**Microsoft Certified: Azure Administrator Associate (AZ-104)**](https://learn.microsoft.com/pt-br/credentials/certifications/azure-administrator/?practice-assessment-type=certification)
+- [**Microsoft Certified: Azure Security Engineer Associate (AZ-500)**](https://learn.microsoft.com/pt-br/credentials/certifications/azure-security-engineer/?practice-assessment-type=certification)  
+Nos próximos artigos, irei demonstrar de forma prática projetos que implementei em organizações de nível enterprise.
 
 ---
 
