--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,8 +17,8 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
-#### #18 Episódio com Diego Pauletto
-[![#18 Episódio com Diego Pauletto](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/18.png)](https://open.spotify.com/episode/22cdYAvuelgMP1GhM1ldHO?si=8ba9b1aafac04964)
+#### #18 Episódio com Diego Pauletto - Desafios, Conquistas e Sonhos
+[![#18 Episódio com Diego Pauletto - Desafios, Conquistas e Sonhos](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/18.png)](https://open.spotify.com/episode/22cdYAvuelgMP1GhM1ldHO?si=8ba9b1aafac04964)
 
 #### #17 Episódio com Cláudio Filipe Lima Raposo
 [![#17 Episódio com Cláudio Filipe Lima Raposo](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/17.png)](https://open.spotify.com/episode/40e5blviRAj7Pk35tA6HVN?si=f57e373ab7a443b6)
