--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!
+[![#19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/19.png)](https://open.spotify.com/episode/04RSQOTXIi4RrBKl48D9FU?si=45a20a3e11354229)
+
 #### #18 Episódio com Diego Pauletto - Desafios, Conquistas e Sonhos
 [![#18 Episódio com Diego Pauletto - Desafios, Conquistas e Sonhos](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/18.png)](https://open.spotify.com/episode/22cdYAvuelgMP1GhM1ldHO?si=8ba9b1aafac04964)
 
