#20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁

--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁
+[![#20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/20.png)](https://open.spotify.com/episode/1hXkIGjH9uDxjTXvFtmRLP?si=9274d26a5fb84d92)
+
 #### #19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!
 [![#19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/19.png)](https://open.spotify.com/episode/04RSQOTXIi4RrBKl48D9FU?si=45a20a3e11354229)
 
