#22 Episódio com Levi Leopoldino Alves (Levinux) – Inovação, Automação e Liderança em DevOps

--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,11 +13,14 @@ Nesta seção do blog, compartilho minha jornada na plataforma YouTube pelo cana
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #22 Episódio com Levi Leopoldino Alves (Levinux) – Inovação, Automação e Liderança em DevOps
+[![#22 Episódio com Levi Leopoldino Alves (Levinux) – Inovação, Automação e Liderança em DevOps](https://img.youtube.com/vi/Qz3P7aBWB9c/0.jpg)](https://www.youtube.com/watch?v=Qz3P7aBWB9c)
+
 ## #21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem
 [![#21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem](https://img.youtube.com/vi/r9Ksazh3t20/0.jpg)](https://www.youtube.com/watch?v=r9Ksazh3t20)
 
-## #20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁
-[![#20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁](https://img.youtube.com/vi/CDK9cQ5tloE/0.jpg)](https://www.youtube.com/watch?v=CDK9cQ5tloE)
+## #20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure
+[![#20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure](https://img.youtube.com/vi/CDK9cQ5tloE/0.jpg)](https://www.youtube.com/watch?v=CDK9cQ5tloE)
 
 ## #19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!
 [![#19 Deseja Ser tornar MVP Microsoft? Descubra o Que Está Fazendo Errado!](https://img.youtube.com/vi/ZwcBInx-x6w/0.jpg)](https://www.youtube.com/watch?v=ZwcBInx-x6w)
