--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem
+[![#21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/21.png)](https://open.spotify.com/episode/2UuYKnBlTIFe5cQQHtxjPU?si=9d9d03e3789f4df0)
+
 #### #20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁
 [![#20 Episódio com Raphael Andrade – Uma Jornada de Excelência em Nuvem e Arquitetura Azure ☁](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/20.png)](https://open.spotify.com/episode/1hXkIGjH9uDxjTXvFtmRLP?si=9274d26a5fb84d92)
 
