--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #22 Episódio DevOps, Automação e Comunidade com Levi Leopoldino Alves (Levinux)
+[![#22 Episódio DevOps, Automação e Comunidade com Levi Leopoldino Alves (Levinux)](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/22.png)](https://open.spotify.com/episode/6L3JRzXzYWOFbZPzs6ThY1?si=defa55a71190452e)
+
 #### #21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem
 [![#21 Episódio com Felipe Augusto – Arquitetura, Liderança e Inovação na Nuvem](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/21.png)](https://open.spotify.com/episode/2UuYKnBlTIFe5cQQHtxjPU?si=9d9d03e3789f4df0)
 
