#23 Episódio com Marcela Amorim – QA, Comunidade e Superação

--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada na plataforma YouTube pelo cana
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #23 Episódio com Marcela Amorim – QA, Comunidade e Superação
+[![#23 Episódio com Marcela Amorim – QA, Comunidade e Superação](https://img.youtube.com/vi/I9wZ932Ifh0/0.jpg)](https://www.youtube.com/watch?v=I9wZ932Ifh0)
+
 ## #22 Episódio DevOps, Automação e Comunidade com Levi Leopoldino Alves (Levinux)
 [![#22 Episódio DevOps, Automação e Comunidade com Levi Leopoldino Alves (Levinux)](https://img.youtube.com/vi/Qz3P7aBWB9c/0.jpg)](https://www.youtube.com/watch?v=Qz3P7aBWB9c)
 
