#26 Episódio com Johnson de Souza Cruz: Tecnologia com Propósito, Educação e Comunidade

--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada na plataforma YouTube pelo cana
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #26 Episódio com Johnson de Souza Cruz: Tecnologia com Propósito, Educação e Comunidade
+[![#26 Episódio com Johnson de Souza Cruz: Tecnologia com Propósito, Educação e Comunidade](https://img.youtube.com/vi/4dvs8kxixSI/0.jpg)](https://www.youtube.com/watch?v=4dvs8kxixSI)
+
 ## #25 Episódio Com João Brito, seu host favorito: Kubernetes, Comunidade e a voz do Kubicast
 [![#25 Episódio Com João Brito, seu host favorito: Kubernetes, Comunidade e a voz do Kubicast](https://img.youtube.com/vi/YRV14Z8Zb1c/0.jpg)](https://www.youtube.com/watch?v=YRV14Z8Zb1c)
 
