#25 Episódio Com João Brito, seu host favorito: Kubernetes, Comunidade e a voz do Kubicast

--- a/_posts/2024-02-22-2meetcncf.md
+++ b/_posts/2024-02-22-2meetcncf.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "2ª Edição do Cloud Native Floripa Meetup"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, 2ª Edição do Cloud Native Floripa Meetup]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, 2ª Edição do Cloud Native Floripa Meetup]
