--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Experiência de Palestrar no TDC na Trilha Arquitetura de Dados"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
 tags: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
