--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Estratégias de Modernização de Aplicações: Aplicando os 6Rs com o Cloud Adoption Framework"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Azure, Cloud Adoption Framework]
 tags: [Artigos, Azure, Cloud Adoption Framework]
