--- a/_posts/2024-09-02-curso-dp-900.md
+++ b/_posts/2024-09-02-curso-dp-900.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Evento DP-900: Fundamentos de Dados do Azure Movimenta a Comunidade Técnica Azure Floripa"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, Presencial, DP-900]
 tags: [Eventos, Comunidade, Azure, DP-900]
