--- a/_posts/2023-10-28-lab.md
+++ b/_posts/2023-10-28-lab.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Laboratórios"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Laboratórios]
 tags: [Laboratórios]
