--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Minhas Experiências em Eventos de Tecnologia Presenciais"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Eventos]
 tags: [Registro Eventos Presenciais, Eventos]
