--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Spotify"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Canais, Spotify]
 tags: [Canais, Spotify]
@@ -16,6 +16,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 [![LowOpsCast](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/LowOpsCast.png)](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=77fbd9161ea246e6)
 
 ### Episódios Destacados
+
+#### #25 Episódio Com João Brito, seu host favorito: Kubernetes, Comunidade e a voz do Kubicast
+[![#25 Episódio Com João Brito, seu host favorito: Kubernetes, Comunidade e a voz do Kubicast](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/25.png)](https://open.spotify.com/episode/4Bg9mhp5S33I7ePMP7guBg?si=50910786efae4ed9)
 
 #### #24 Episódio com José Neto: Superação, Tech e Qualidade de Vida na Nuvem
 [![#24 Episódio com José Neto: Superação, Tech e Qualidade de Vida na Nuvem](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/24.png)](https://open.spotify.com/episode/0wYTTebsPs4p0d0KkI4UL6?si=8c0cacb913fa4365)
