--- a/_posts/2024-06-02-tc.bc24.md
+++ b/_posts/2024-06-02-tc.bc24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Tech Connection Balneário Camburiú - GreenOps na Cloud: Construindo o Futuro com Sustentabilidade"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Tech Connection Balneário Camburiú]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, ]
