--- a/_posts/2024-06-23-Podcast.md
+++ b/_posts/2024-06-23-Podcast.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Episódio Especial do Podcast LowOpsCast no TDC"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Participante, TDC, LowOpsCast]
 tags: [Registro Eventos Presenciais, Participante, TDC, LowOpsCast]
