--- a/_posts/2024-07-25-IA-Gen.md
+++ b/_posts/2024-07-25-IA-Gen.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Explorando a Inteligência Artificial Generativa"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Inteligência Artificial Generativa]
 tags: [Artigos, Inteligência Artificial Generativa, IA]
