--- a/_posts/2024-09-11-codecon.md
+++ b/_posts/2024-09-11-codecon.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Minha Experiência na Codecon Summit: Um Evento Para Devs e Por Devs"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Participante, Codecon Summit 2024]
 tags: [Registro Eventos Presenciais, Participante, Codecon Summit 2024]
