--- a/_posts/2024-09-12-zsh.md
+++ b/_posts/2024-09-12-zsh.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Manual de Configuração do Zsh"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Configuração, Zsh]
 tags: [Artigos, Configuração, Zsh]
