--- a/_posts/2024-11-02-mvp.day.md
+++ b/_posts/2024-11-02-mvp.day.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "MVP TALKS CI&T: Conexão, Conhecimento e Inovação em Cloud e Inteligência Artificial!"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, MVP TALKS CI&T]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, MVP TALKS CI&T]
