--- a/_posts/2024-11-10-tc-floripa24.md
+++ b/_posts/2024-11-10-tc-floripa24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Tech Connection 2024: Estratégias de Cloud Foundation em Larga Escala"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Tech Connection 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Tech Connection 2024]
