--- a/_posts/2024-11-24-code.island24.md
+++ b/_posts/2024-11-24-code.island24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Code Island Cloud 2024: Pipelines com Azure DevOps - Automatizando o (Im)possível"
-author: rafaferreira011
+author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Code Island Cloud 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Code Island Cloud 2024]
