--- a/_posts/2024-07-21-kcd-floripa24.md
+++ b/_posts/2024-07-21-kcd-floripa24.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Organizador Eventos – KCD Floripa Brazil"
+title: "Organizador Eventos – KCD Floripa Brazil 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
-tags: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
+categories: [Voluntariado, Organizador Eventos – KCD Floripa Brazil 2045]
+tags: [Voluntariado, Organizador Eventos – KCD Floripa Brazil 2024]
 image:
   path: https://images.credly.com/size/680x680/images/baf493ca-d548-435b-9811-5c3385a674be/image.png
 ---
