--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -11,6 +11,11 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 
 ## Eventos Recentes
 
+### 2025
+
+- <i class="fa-solid fa-link"></i> [Abril - Esquenta MVP Conf Blumenau](https://www.hubingressos.com.br/evento/mvpconfb)
+- <i class="fa-solid fa-link"></i> [Abril - SQL Saturday 2025 by Comunidado](https://comunidado.com.br/)
+
 ### 2024
 
 - <i class="fa-solid fa-link"></i> [Novembro - Code Island Cloud 2024](https://cloud.codeisland.com.br/)
