--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -3,7 +3,7 @@ layout: post
 title: "Evento Presencial Grande Florianópolis - AZ-900: Fundamentos do Azure"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Organização de Eventos, Presencial, AZ-900]
+categories: [Organização de Eventos, AZ-900]
 tags: [Eventos, Comunidade, Azure, AZ-900]
 ---
 
