--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -3,7 +3,7 @@ layout: post
 title: "AZ-900: Fundamentos do Azure 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Organização de Eventos, Evento Presencial Grande Florianópolis - AZ-900 Fundamentos do Azure 2024]
+categories: [Organização de Eventos]
 tags: [Eventos, Comunidade, Azure, Evento Presencial Grande Florianópolis - AZ-900 Fundamentos do Azure 2024]
 ---
 
