--- a/_posts/2024-06-02-tc.bc24.md
+++ b/_posts/2024-06-02-tc.bc24.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Tech Connection Balneário Camburiú - GreenOps na Cloud: Construindo o Futuro com Sustentabilidade"
+title: "GreenOps na Cloud: Construindo o Futuro com Sustentabilidade - Tech Connection Balneário Camburiú 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, Tech Connection Balneário Camburiú]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, ]
+categories: [Registro Eventos Presenciais, Palestrante, GreenOps na Cloud Construindo o Futuro com Sustentabilidade - Tech Connection Balneário Camburiú 2024]
+tags: [Registro Eventos Presenciais, Eventos, Comunidade, GreenOps na Cloud Construindo o Futuro com Sustentabilidade - Tech Connection Balneário Camburiú 2024]
 ---
 
 No Tech Connection 2024, realizado em Balneário Camboriú, trouxe uma palestra com tema crucial para o futuro da tecnologia e do planeta: **GreenOps na Cloud**. Este conceito, ainda emergente, tem como foco a sustentabilidade no uso de recursos em ambientes de nuvem, conectando práticas de DevOps com objetivos ambientais.
