--- a/_posts/2024-11-24-code.island24.md
+++ b/_posts/2024-11-24-code.island24.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Code Island Cloud 2024: Pipelines com Azure DevOps - Automatizando o (Im)possível"
+title: "Pipelines com Azure DevOps: Automatizando o (im)possível - Code Island Cloud 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, Code Island Cloud 2024]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, Code Island Cloud 2024]
+categories: [Registro Eventos Presenciais, Palestrante, Pipelines com Azure DevOps Automatizando o (im)possível - Code Island Cloud 2024]
+tags: [Registro Eventos Presenciais, Eventos, Comunidade, Pipelines com Azure DevOps Automatizando o (im)possível - Code Island Cloud 2024]
 ---
 
 No último sábado, 23 de novembro de 2024, tive o prazer de participar como palestrante da segunda edição do **Code Island Cloud**, realizado na Unisul – Centro Florianópolis. O evento foi 100% presencial e trouxe à comunidade as últimas novidades em **Cloud**, abrangendo temas de **Dev, Data e DevOps**. Além disso, foi uma grande oportunidade para **networking** com profissionais apaixonados por tecnologia!
