--- a/_posts/2024-02-22-2meetcncf.md
+++ b/_posts/2024-02-22-2meetcncf.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "2ª Edição do Cloud Native Floripa Meetup"
+title: "Antes do Cloud Native: Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, 2ª Edição do Cloud Native Floripa Meetup]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, 2ª Edição do Cloud Native Floripa Meetup]
+categories: [Registro Eventos Presenciais, Palestrante, Antes do Cloud Native: Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição]
+tags: [Registro Eventos Presenciais, Eventos, Comunidade, Antes do Cloud Native: Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição]
 ---
  
 No dia 21 de fevereiro de 2024, tive o prazer de palestrar no 2º Cloud Native Floripa Meetup, organizado pelo Community Group Cloud Native Santa Catarina. O evento realizado na "[A Fábrica Working Bar](https://www.afabricaworkingbar.com/coworking)".
