--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "AZ-900: Fundamentos do Azure 2024"
+title: "Curso AZ-900 - Fundamentos da Azure 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Organização de Eventos, AZ-900 Fundamentos do Azure 2024]
-tags: [Eventos, Comunidade, Azure, Evento Presencial Grande Florianópolis - AZ-900 Fundamentos do Azure 2024]
+categories: [Organização de Eventos, Curso AZ-900 - Fundamentos da Azure 2024]
+tags: [Eventos, Comunidade, Azure, Evento Presencial Grande Florianópolis - Curso AZ-900 - Fundamentos da Azure 2024]
 ---
 
 Agradecimento pelo Sucesso do Evento AZ-900: Fundamentos do Azure 📢
