--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Experiência de Palestrar no TDC na Trilha Arquitetura de Dados"
+title: "Plataformização de Arquitetura de Dados com Backstage.io e IAC - TDC Florianópolis - Trilha Arquitetura de Dados 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
-tags: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
+categories: [Registro Eventos Presenciais, Palestrante, Plataformização de Arquitetura de Dados com Backstage.io e IAC - TDC Florianópolis - Trilha Arquitetura de Dados 2024]
+tags: [Registro Eventos Presenciais, Palestrante, Plataformização de Arquitetura de Dados com Backstage.io e IAC - TDC Florianópolis - Trilha Arquitetura de Dados 2024]
 ---
 
 #### Introdução
