--- a/_posts/2024-09-02-curso-dp-900.md
+++ b/_posts/2024-09-02-curso-dp-900.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "DP-900: Fundamentos de Dados do Azure 2024"
+title: "Curso DP-900 Fundamentos de Dados do Azure 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Organização de Eventos, DP-900 Fundamentos de Dados do Azure 2024]
-tags: [Eventos, Comunidade, Azure, DP-900 Fundamentos de Dados do Azure 2024]
+categories: [Organização de Eventos, Curso DP-900 Fundamentos de Dados do Azure 2024]
+tags: [Eventos, Comunidade, Azure, Curso DP-900 Fundamentos de Dados do Azure 2024]
 ---
 
 No último sábado, 31 de agosto de 2024, a comunidade técnica Azure Floripa se reuniu na Igreja Batista de Forquilhinhas para um dia de aprendizado e colaboração com o curso **DP-900: Fundamentos de Dados do Azure**. Parabenizamos todos os participantes pelo incrível engajamento e dedicação ao longo do evento!
