--- a/_posts/2024-11-10-tc-floripa24.md
+++ b/_posts/2024-11-10-tc-floripa24.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "Tech Connection 2024: Estratégias de Cloud Foundation em Larga Escala"
+title: "Estratégias de Cloud Foundation em Larga Escala: Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024"
 author: rafaelmaferreira
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Palestrante, Tech Connection 2024]
-tags: [Registro Eventos Presenciais, Eventos, Comunidade, Tech Connection 2024]
+categories: [Registro Eventos Presenciais, Palestrante, Estratégias de Cloud Foundation em Larga Escala: Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024]
+tags: [Registro Eventos Presenciais, Eventos, Comunidade, Estratégias de Cloud Foundation em Larga Escala: Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024]
 ---
 
 No dia **9 de novembro de 2024**, tive o prazer de palestrar na segunda edição do **[Tech Connection Florianópolis](https://talkfloripa.com.br/)**. Minha palestra, intitulada **“Estratégias de Cloud Foundation em Larga Escala: Garantindo que Você Não Retorne para On-Premise”**, foi uma oportunidade de compartilhar minha experiência e conhecimento com um público engajado e apaixonado por tecnologia.
