--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -13,6 +13,9 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 
 | Mês | Evento |
 |-----|--------|
+| Jun | [**Encontro da comunidade AWS User Group Florianópolis - Edição de Junho**](https://www.meetup.com/aws-user-group-floripa/events/308134123/?eventOrigin=group_upcoming_events) |
+| Mai | [**Global Azure 2025 – Edição Azure Floripa**](https://www.meetup.com/pt-BR/azure-floripa/events/306207034/) |
+| Abr | [**WhiteStone_dev - 7ª Edição Cripto - Especial Fênix**](https://www.sympla.com.br/evento/whitestone-dev-7-edicao-cripto-especial-fenix-a-retomada-da-comunidade-tech/2851067) |
 | Abr | [**Esquenta MVP Conf Blumenau**](https://www.hubingressos.com.br/evento/mvpconfb) |
 | Abr | [**SQL Saturday 2025 by Comunidado**](https://comunidado.com.br/) |
 
