--- a/_posts/2024-02-25-kcdsp24.md
+++ b/_posts/2024-02-25-kcdsp24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Antes do Cloud Native: Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentável - KCD São Paulo - Brasil 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, KCD Brasil - São Paulo 2024]
 tags: [Registro Eventos Presenciais - Eventos, Comunidade, KCD Brasil - São Paulo 2024]
