--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Curso AZ-900 - Fundamentos da Azure 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, Curso AZ-900 - Fundamentos da Azure 2024]
 tags: [Eventos, Comunidade, Azure, Evento Presencial Grande Florianópolis - Curso AZ-900 - Fundamentos da Azure 2024]
@@ -32,7 +32,7 @@ Instrutores:
 👨‍🏫 [Cláudio Raposo](https://www.linkedin.com/in/cfraposo/) - [Msc Degree at MUST University | Microsoft MVP | Microsoft MCT ]
 Especialista em Desenvolvimento de Software, com mais de 10 anos de experiência e formação em Análise de Sistemas e Engenharia.
 
-👨‍🏫 [Rafael Martin Alves Ferreira](https://www.linkedin.com/in/rafaelmaferreira/) (eu) - [Microsoft MCT]
+👨‍🏫 [Rafael Martin Alves Ferreira](https://www.linkedin.com/in/orafaelferreiraa/) (eu) - [Microsoft MCT]
 Senior DevOps Engineer com especialização arquiteturas em nuvem Azure com mais de uma década de experiência em TI, 17 certificações técnicas e formado em Ciência da Computação.
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/az-900/0.jpeg)
