--- a/_posts/2024-09-02-curso-dp-900.md
+++ b/_posts/2024-09-02-curso-dp-900.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Curso DP-900 Fundamentos de Dados do Azure 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, Curso DP-900 Fundamentos de Dados do Azure 2024]
 tags: [Eventos, Comunidade, Azure, Curso DP-900 Fundamentos de Dados do Azure 2024]
@@ -25,7 +25,7 @@ O evento contou com a presença de dois renomados especialistas, ambos membros a
 
 👨‍🏫 [Cláudio Raposo](https://www.linkedin.com/in/cfraposo/) - Microsoft MVP e Microsoft Certified Trainer, trouxe mais de uma década de experiência em desenvolvimento de software, compartilhando insights valiosos sobre análise de sistemas e melhores práticas de desenvolvimento.
 
-👨‍🏫 [Rafael Martin Alves Ferreira](https://www.linkedin.com/in/rafaelmaferreira/) (eu) - Microsoft MVP e Microsoft Certified Trainer, com vasta experiência em arquiteturas de nuvem Azure, ofereceu uma visão aprofundada sobre a transformação digital e soluções inovadoras em nuvem.
+👨‍🏫 [Rafael Martin Alves Ferreira](https://www.linkedin.com/in/orafaelferreiraa/) (eu) - Microsoft MVP e Microsoft Certified Trainer, com vasta experiência em arquiteturas de nuvem Azure, ofereceu uma visão aprofundada sobre a transformação digital e soluções inovadoras em nuvem.
 
 ## Engajamento e Colaboração da Comunidade Azure Floripa
 
