--- a/_posts/2024-11-02-mvp.day.md
+++ b/_posts/2024-11-02-mvp.day.md
@@ -1,14 +1,14 @@
 ---
 layout: post
 title: "Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024]
 ---
 
 
-No último dia 24 de outubro, organizamos o primeiro CI&T MVP Day — um evento interno, exclusivo para funcionários da CI&T, realizado na nossa sede global tech em Campinas. Este evento marcante reuniu palestras sobre segurança, nuvem e inteligência artificial, além de proporcionar momentos de troca e inspiração entre profissionais apaixonados por tecnologia. Com nomes de peso como **[Rafael Martin Alves Ferreira](https://www.linkedin.com/in/rafaelmaferreira/)**, **[Márcio Rogério Nizzola](https://www.linkedin.com/in/nizzola/)** e **[Cláudio Raposo](https://www.linkedin.com/in/cfraposo/)**, exploramos temas que estão moldando o presente e o futuro da tecnologia.
+No último dia 24 de outubro, organizamos o primeiro CI&T MVP Day — um evento interno, exclusivo para funcionários da CI&T, realizado na nossa sede global tech em Campinas. Este evento marcante reuniu palestras sobre segurança, nuvem e inteligência artificial, além de proporcionar momentos de troca e inspiração entre profissionais apaixonados por tecnologia. Com nomes de peso como **[Rafael Martin Alves Ferreira](https://www.linkedin.com/in/orafaelferreiraa/)**, **[Márcio Rogério Nizzola](https://www.linkedin.com/in/nizzola/)** e **[Cláudio Raposo](https://www.linkedin.com/in/cfraposo/)**, exploramos temas que estão moldando o presente e o futuro da tecnologia.
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/mvp.talks/1.png)
 
