--- a/_posts/2024-11-04-tftec2024.md
+++ b/_posts/2024-11-04-tftec2024.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "TFTEC Ao Vivo 2024: Conexão, Conhecimento e Imersão em Cloud"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Participante, TFTEC]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, TFTEC]
