--- a/_posts/2025-01-09-az-policy.md
+++ b/_posts/2025-01-09-az-policy.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "O que é Azure Policy? Uma Visão Completa"
-author: rafaelmaferreira
+author: orafaelferreira
 categories: [Artigos, Azure, Policy]
 tags: [Artigos, Azure, Segurança, Policy]
 ---
