--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Lista dos eventos de Tecnologia Presenciais que eu já fui"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Lista dos eventos de Tecnologia Presenciais que eu já fui]
 tags: [Registro Eventos Presenciais, Lista dos eventos de Tecnologia Presenciais que eu já fui]
