--- a/_posts/2024-07-21-cncfsc.md
+++ b/_posts/2024-07-21-cncfsc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Organizador – Cloud Native Santa Catarina"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2025-04-20 11:00:00 -0300
 categories: [Organizador Grupo de Comunidade, Cloud Native Santa Catarina]
 tags: [Organizador Grupo de Comunidade, Cloud Native Santa Catarinaa]
