--- a/_posts/2024-07-21-kcd-floripa24.md
+++ b/_posts/2024-07-21-kcd-floripa24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "KCD Floripa Brazil 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, KCD Floripa Brazil 2024]
 tags: [Organização de Eventos, Organizador Eventos – KCD Floripa Brazil 2024]
