--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Estratégias de Modernização de Aplicações: Aplicando os 6Rs com o Cloud Adoption Framework"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Azure, Cloud Adoption Framework]
 tags: [Artigos, Azure, Cloud Adoption Framework]
@@ -53,7 +53,7 @@ A abordagem **Replace** consiste em substituir uma aplicação existente por uma
 
 A inovação na nuvem é um diferencial competitivo, vai além da migração ou modernização, desbloqueando novas capacidades técnicas e expandindo as possibilidades de negócios. No **Cloud Adoption Framework**, o foco é entender profundamente as necessidades dos clientes e criar inovações que transformem a forma como eles interagem com os produtos da empresa.
 
-Para saber mais sobre o CAF, [confira esse artigo](https://rafaelmaferreira.com.br/posts/foundation-cloud/) no meu blog.
+Para saber mais sobre o CAF, [confira esse artigo](https://orafaelferreira.com/posts/foundation-cloud/) no meu blog.
 
 **Implementação de Inovação com MVPs**
 
