--- a/_posts/2024-10-08-tls.md
+++ b/_posts/2024-10-08-tls.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Prepare-se para a Transição Obrigatória do TLS 1.2 no Azure"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Azure, Segurança]
 tags: [Artigos, Azure, Segurança, TLS]
