--- a/_posts/2024-11-10-tc-floripa24.md
+++ b/_posts/2024-11-10-tc-floripa24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Estratégias de Cloud Foundation em Larga Escala: Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Estratégias de Cloud Foundation em Larga Escala Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Estratégias de Cloud Foundation em Larga Escala Garantindo que Você Não Retorne para On-Premise - Tech Connection Floripa 2 Edição 2024]
