--- a/_posts/2025-04-06-sqlsat25.md
+++ b/_posts/2025-04-06-sqlsat25.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Pipelines com Azure DevOps: Automatizando o Provisionamento Seguro da sua infraestrutura na nuvem - SQL Saturday 2025 by Comunidado"
-author: rafaelmaferreira
+author: orafaelferreira
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Pipelines com Azure DevOps Automatizando o Provisionamento Seguro da sua infraestrutura na nuvem - SQL Saturday 2025 by Comunidado]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, SQL Saturday 2025 by Comunidado]
