--- a/_posts/2024-02-22-2meetcncf.md
+++ b/_posts/2024-02-22-2meetcncf.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Antes do Cloud Native: Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Antes do Cloud Native Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Antes do Cloud Native Construindo uma Fundação Sólida para a Nuvem Impactando um Futuro Sustentáve - Cloud Native Floripa - 2º Edição]
