--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Curso AZ-900 - Fundamentos da Azure 2024"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, Curso AZ-900 - Fundamentos da Azure 2024]
 tags: [Eventos, Comunidade, Azure, Evento Presencial Grande Florianópolis - Curso AZ-900 - Fundamentos da Azure 2024]
