--- a/_posts/2024-11-02-mvp.day.md
+++ b/_posts/2024-11-02-mvp.day.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Architecting a Secure Landing Zone for AI Workloads in the Cloud - MVP TALKS CI&T 2024]
