--- a/_posts/2024-06-02-tc.bc24.md
+++ b/_posts/2024-06-02-tc.bc24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "GreenOps na Cloud: Construindo o Futuro com Sustentabilidade - Tech Connection Balneário Camburiú 2024"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Tech Connection Balneário Camburiú]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, ]
