--- a/_posts/2024-09-02-curso-dp-900.md
+++ b/_posts/2024-09-02-curso-dp-900.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Curso DP-900 Fundamentos de Dados do Azure 2024"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Organização de Eventos, Curso DP-900 Fundamentos de Dados do Azure 2024]
 tags: [Eventos, Comunidade, Azure, Curso DP-900 Fundamentos de Dados do Azure 2024]
