--- a/_posts/2024-10-29-agil.md
+++ b/_posts/2024-10-29-agil.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Automatizando Infraestrutura Moderna com Metodologias Ágeis"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Artigos, Metodologias Ageis]
 tags: [Artigos, Metodologias Ageis]
