--- a/_posts/2024-11-24-code.island24.md
+++ b/_posts/2024-11-24-code.island24.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Pipelines com Azure DevOps: Automatizando o (im)possível - Code Island Cloud 2024"
-author: orafaelferreira
+author: orafaelferreiraa
 #date: 2023-10-27 18:30:00 -500
 categories: [Registro Eventos Presenciais, Palestrante, Pipelines com Azure DevOps Automatizando o (im)possível - Code Island Cloud 2024]
 tags: [Registro Eventos Presenciais, Eventos, Comunidade, Pipelines com Azure DevOps Automatizando o (im)possível - Code Island Cloud 2024]
